[package]
name = "obsmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.29"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
lazy_static = "1.4.0"
markdown = "1.0.0-alpha.13"
pulldown-cmark = "0.9.3"
regex = "1.9.5"
